--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ background-color:#70ae76;
 <div class="menu">
 <ul style= "margin:0px;padding:10px;overflow:hidden;background-color:rgba(255, 99, 71, 0.5);;">
   <li style="float:left;margin-right:8%;display:block;color:DodgerBlue;;text-align:center;padding:23px;text-decoration:none;"><a href="index.html">ΜΕΝΟΥ</a></li>
+  <li style="float:left;margin-right:8%;display:block;color:DodgerBlue;;text-align:center;padding:23px;text-decoration:none;"><a href="prwtomap.html">Χάρτης POI</a></li>
   <li style="float:left;margin-right:8%;display:block;color:DodgerBlue;;text-align:center;padding:23px;text-decoration:none;"><a href="1hdiadromhmap.html">1η Διαδρομή</a></li>
   <li style="float:left;margin-right:8%;display:block;color:DodgerBlue;;text-align:center;padding:23px;text-decoration:none;"><a href="2hdiadromhmap.html">2η Διαδρομή</a></li>
   <li style="float:left;margin-right:8%;display:block;color:DodgerBlue;;text-align:center;padding:23px;text-decoration:none;"><a href="3hdiadromhmap.html">3η Διαδρομή</a></li>
